# frames

./: .gitignore  CMakeLists.txt  CMakeSettings.json  TODO_streamingTexture.txt  build_ffmpeg.md
data/shaders/: circle.glsl  lines.glsl  point.glsl  video.glsl
include/ffmpeg/libavutil/: ffversion.h
include/glad/: glad.h
include/glm/detail/: func_common.inl  func_common_simd.inl  func_geometric.hpp  func_packing.hpp
include/glm/gtc/: matrix_transform.inl  ulp.inl
include/glm/gtx/: matrix_decompose.inl  simd_quat.hpp  simd_vec4.hpp  vector_angle.inl
include/glm/simd/: common.h
lib/ffmpeg/: CMakeLists.txt  avcodec.lib  avdevice.lib  avformat.lib  avutil.lib  readme.md  swresample.lib  swscale.lib
lib/ffmpeg/interface/: avfilter.lib
lib/glad/: CMakeLists.txt
lib/glad/src/: glad.c
lib/glfw-3.3.4/examples/: simple.c
lib/glfw-3.3.4/include/GLFW/: glfw3.h
lib/glfw-3.3.4/src/: context.c  internal.h
lib/imgui/: CMakeLists.txt
lib/imgui1/: CMakeLists.txt
lib/nfd/: common.h  nfd_win.cpp
lib/nfd/include/: nfd.h
src/: ffmpeg.h  main.cpp  render.cpp  render.h  resources.cpp  resources.h  settings.cpp  settings.h  workspace.cpp  workspace.h  workstate.cpp  workstate.h
src/image/: lodepng.cpp  lodepng.h
src/io/: io.cpp  io.h
src/model/: camera.cpp  camera.h  frame.cpp  frame.h  mesh.cpp  mesh.h
src/shader/: shader.cpp  shader.h  shaderBase.cpp  shaderBase.h  shaderLog.cpp  shaderLog.h  shaderSource.cpp  shaderSource.h
src/ui/: dragdrop.cpp  dragdrop.h  ui.cpp  ui.h
src/util/: circlebuffer.h  filedialog.cpp  filedialog.h  fpscounter.cpp  fpscounter.h  fs.cpp  fs.h  math.cpp  math.h
src/video/: ffmpeg.h  frame.cpp  frame.h  image.cpp  image.h  video.cpp  video.h
tests/: CircleBufferTest.cpp  hello.cpp
